Update new images

--- a/assets/images/manifest.json
+++ b/assets/images/manifest.json
@@ -822,6 +822,90 @@
     {
       "img": "assets/images/cat206.webp",
       "caption": "Mèo với vẻ mặt đầy thách thức"
+    },
+    {
+      "img": "assets/images/cat207.webp",
+      "caption": "Mèo đang tìm kiếm niềm vui mới"
+    },
+    {
+      "img": "assets/images/cat208.webp",
+      "caption": "Mèo với ánh mắt đầy tò mò"
+    },
+    {
+      "img": "assets/images/cat209.webp",
+      "caption": "Mèo đang tận hưởng khoảnh khắc yên tĩnh"
+    },
+    {
+      "img": "assets/images/cat210.webp",
+      "caption": "Mèo với vẻ mặt đầy thông thái"
+    },
+    {
+      "img": "assets/images/cat211.webp",
+      "caption": "Mèo đang lắng nghe âm thanh lạ"
+    },
+    {
+      "img": "assets/images/cat212.webp",
+      "caption": "Mèo với ánh mắt đầy cảnh giác"
+    },
+    {
+      "img": "assets/images/cat213.webp",
+      "caption": "Mèo đang chuẩn bị cho cuộc phiêu lưu"
+    },
+    {
+      "img": "assets/images/cat214.webp",
+      "caption": "Mèo với vẻ mặt đầy tự tin"
+    },
+    {
+      "img": "assets/images/cat215.webp",
+      "caption": "Mèo đang tìm kiếm đồng minh"
+    },
+    {
+      "img": "assets/images/cat216.webp",
+      "caption": "Mèo với ánh mắt đầy tinh nghịch"
+    },
+    {
+      "img": "assets/images/cat217.webp",
+      "caption": "Mèo đang mơ về những miền xa xôi"
+    },
+    {
+      "img": "assets/images/cat218.webp",
+      "caption": "Mèo với vẻ mặt đầy quyết tâm"
+    },
+    {
+      "img": "assets/images/cat219.webp",
+      "caption": "Mèo đang tận hưởng ánh nắng buổi sáng"
+    },
+    {
+      "img": "assets/images/cat220.webp",
+      "caption": "Mèo với ánh mắt đầy khát khao"
+    },
+    {
+      "img": "assets/images/cat221.webp",
+      "caption": "Mèo đang suy ngẫm về cuộc sống"
+    },
+    {
+      "img": "assets/images/cat222.webp",
+      "caption": "Mèo với vẻ mặt đầy kiêu hãnh"
+    },
+    {
+      "img": "assets/images/cat223.webp",
+      "caption": "Mèo đang chuẩn bị cho giấc ngủ"
+    },
+    {
+      "img": "assets/images/cat224.webp",
+      "caption": "Mèo với ánh mắt đầy mong đợi"
+    },
+    {
+      "img": "assets/images/cat225.webp",
+      "caption": "Mèo đang tìm kiếm niềm vui mới"
+    },
+    {
+      "img": "assets/images/cat226.webp",
+      "caption": "Mèo với vẻ mặt đầy suy tư"
+    },
+    {
+      "img": "assets/images/cat227.webp",
+      "caption": "Mèo đang lắng nghe tiếng gọi của tự nhiên"
     }
 ]
   
